{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 7,
  "lineage": "34ca57a3-aa32-3236-1baa-b8b410249295",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ProdVPCIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633107307785:internet-gateway/igw-05d6f4f3c506334ca",
            "id": "igw-05d6f4f3c506334ca",
            "owner_id": "633107307785",
            "tags": {
              "Name": "ProdVPCIGW"
            },
            "tags_all": {
              "Name": "ProdVPCIGW"
            },
            "vpc_id": "vpc-05e35f0262acddda2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ProdVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05d6f4f3c506334ca",
            "id": "r-rtb-061a98fb49bfdd7851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-061a98fb49bfdd785",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ProdVPCIGW",
            "aws_route_table.public_rtb",
            "aws_vpc.ProdVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633107307785:route-table/rtb-061a98fb49bfdd785",
            "id": "rtb-061a98fb49bfdd785",
            "owner_id": "633107307785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_rtb"
            },
            "tags_all": {
              "Name": "public_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e35f0262acddda2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ProdVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1bdc045549d6cce",
            "route_table_id": "rtb-061a98fb49bfdd785",
            "subnet_id": "subnet-0591e7a99c6d23cae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rtb",
            "aws_subnet.public-subnet1",
            "aws_vpc.ProdVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633107307785:subnet/subnet-0591e7a99c6d23cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0591e7a99c6d23cae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633107307785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-05e35f0262acddda2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ProdVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ProdVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633107307785:vpc/vpc-05e35f0262acddda2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5a35fc299da2d06",
            "default_route_table_id": "rtb-066f2a4ccaf2a7b1c",
            "default_security_group_id": "sg-0c3af94871667de95",
            "dhcp_options_id": "dopt-0772452eba2925b63",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e35f0262acddda2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066f2a4ccaf2a7b1c",
            "owner_id": "633107307785",
            "tags": {
              "Name": "ProdVPC"
            },
            "tags_all": {
              "Name": "ProdVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}